# kobayashi-stfc

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  COMBAT_FEATURES_FROM_STFC_TOOLBOX.md  Cargo.toml  Copy of STFC Cheat Sheet - M86 (1.4RC).xlsx  DESIGN.md  IMPLEMENTATION_PLAN_COMBAT_ENGINE.md  LICENSE  MITIGATION_AUDIT.md  README.md  ROADMAP.md  SYNC.md  kobayashi-scaffold.sh  package-lock.json  package.json  run.sh  stfc-rust-project.txt
.claude/: settings.local.json
.cursor/plans/: officer_roster_import_format_37a61cad.plan.md  simple_roster_csv_import_fb555905.plan.md
.cursor/rules/: 00-global-kobayashi.mdc  10-rust-simulator-src.mdc  20-data-integrity-data.mdc  (+4 more)
benches/: monte_carlo_parallel_bench.rs  simulator_bench.rs
data/: .gitkeep  README.md  forbidden_chaos_tech.json  hull_id_registry.json  registry.json  research_catalog.json  syndicate_reputation.json
docs/: COMBAT_TRACE.md  DESIGN.md  IMPLEMENTATION_PLAN_COMBAT_ENGINE.md  LCARS_CONTRIBUTING.md  MAVERICK.md  PERFORMANCE.md  ROADMAP.md  STFC_SPACE_DATA_STRATEGY.md  SYNC.md  combat_log_format.md  combinatorics-and-optimization-theory.md
fight samples/: realta vs takret militia 10.csv
frontend/: .gitkeep  index.html  package-lock.json  package.json  vite.config.ts
profiles/: index.json
rosters/: buildings.imported.json  my_roster.txt  research.imported.json  ships.imported.json
scripts/: README.md  build_hull_id_registry.mjs  build_ship_registry.py  capture-screenshot.mjs  fetch_stfc_data.ps1  fetch_stfcspace_ships.mjs  import_stfcspace_buildings.mjs  import_stfcspace_research.mjs  normalize_stfcspace_ships.mjs  validate_stfcspace_mapping.mjs  verify.mjs
src/: cli.rs  lib.rs  main.rs  perf_log.rs
src/combat/: buffs.rs  (+13 more)
tests/: cli_dispatch_tests.rs  combat_round_timing_tests.rs  combat_tests.rs  data_provenance_tests.rs  duplicate_officer_compat_tests.rs  log_ingest_tests.rs  recorded_fight_calibration_tests.rs  research_profile_merge_tests.rs  scenario_research_integration_tests.rs  server_api_tests.rs
tools/: __init__.py
(+12799 files in other folders)
