[package]
name = "kobayashi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "normalize_stfc_data"
path = "src/bin/normalize_stfc_data.rs"

[[bin]]
name = "import_forbidden_chaos"
path = "src/bin/import_forbidden_chaos.rs"

[[bin]]
name = "validate_data"
path = "src/bin/validate_data.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
