[package]
name = "kobayashi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "normalize_stfc_data"
path = "src/bin/normalize_stfc_data.rs"

[[bin]]
name = "import_forbidden_chaos"
path = "src/bin/import_forbidden_chaos.rs"

[[bin]]
name = "import_syndicate_reputation"
path = "src/bin/import_syndicate_reputation.rs"

[[bin]]
name = "inspect_syndicate_xlsx"
path = "src/bin/inspect_syndicate_xlsx.rs"

[[bin]]
name = "syndicate_bonuses"
path = "src/bin/syndicate_bonuses.rs"

[[bin]]
name = "validate_data"
path = "src/bin/validate_data.rs"

[[bin]]
name = "generate_lcars"
path = "src/bin/generate_lcars.rs"

[[bin]]
name = "benchmark_simulator"
path = "src/bin/benchmark_simulator.rs"

[[bin]]
name = "benchmark_parallel_speedup"
path = "src/bin/benchmark_parallel_speedup.rs"

[[bin]]
name = "merge_lcars"
path = "src/bin/merge_lcars.rs"

[[bench]]
name = "simulator"
harness = false
path = "benches/simulator_bench.rs"

[[bench]]
name = "monte_carlo_parallel"
harness = false
path = "benches/monte_carlo_parallel_bench.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
calamine = "0.24"
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }

[dev-dependencies]
criterion = "0.5"
